# ros2_abstraction_demo

./: CMakeLists.txt  README.md  package.xml
src/apps/: receiver_app.cpp  sender_app.cpp
src/common/: message_text.h
src/interfaces/: i_factory.h  i_message.h  i_receiver.h  i_sender.h
src/ros2/: factory_ros2.cpp  factory_ros2.h  receiver_text.h  sender_text.h
src/socket/: factory_socket.cpp  factory_socket.h  receiver_text_socket.h  sender_text_socket.h
